--- a/VSReact.Web/index.html
+++ b/VSReact.Web/index.html
@@ -1,4 +1,4 @@
-<html>
+﻿<html>
   <head>
     <meta charset="utf-8">
     <title>Redux TodoMVC</title>
@@ -7,6 +7,4 @@
     <div class="todoapp" id="root">
     </div>
   </body>
-  <script src="{%=o.htmlWebpackPlugin.files.chunks.vendor.entry%}"></script>
-  <script src="{%=o.htmlWebpackPlugin.files.chunks.main.entry%}"></script>
 </html>
