--- a/VSReact.Web/index.html
+++ b/VSReact.Web/index.html
@@ -1,7 +1,7 @@
 ﻿<html>
   <head>
     <meta charset="utf-8">
-    <title>Redux TodoMVC</title>
+    <title>Visual Studio React TodoMVC</title>
   </head>
   <body>
     <div class="todoapp" id="root">
